--- a/reports/mt-thesis/results.tex
+++ b/reports/mt-thesis/results.tex
@@ -18,7 +18,6 @@ Likewise, we analyze the first ten imported cases to Europe to estimate the main
     \caption{\textbf{First imported cases of SARS-CoV-2 to Europe.} \textbf{A} We estimate the probability distribution of the time for the first imported case to Europe (in grey). Each row highlights the probability of this first case going to the indicated country (in color). \textbf{B} In a similar way, we considered the time of the ten first imported cases into any of the European country, and plot the time probability distribution (in grey). In the rows, we plot the probability of each country being the destination country of any of the first 10 imported cases to Europe (in color). \textbf{C} Same probability distribution of the time for the 10 first imported cases to any European country (in grey) than in B, but in each row we highlight in color the 
     probability of these cases coming from a specific country.}
     \label{fig:firstEUcountry}
-    \todo[inline]{ticks for every month}
 \end{figure}
 
 
@@ -80,7 +79,7 @@ The inferred epidemic trajectories contain the information about the total numbe
     \centering
     \includegraphics[width=0.9\textwidth]{210205_europe10_figtraj06.png}
     \caption{\textbf{SARS-CoV-2 inferred cases and ECDC confirmed cases by country over time.} To compare with the official ECDC confirmed cases in a analogous time frame, we consider the no longer infectious cases inferred by the model that appear after a mean period of ten days post-infection. Each line represent the cumulative number of inferred cases in log scale for each of the 500 analysed epidemic trajectories with time in the x-axis. The ECDC confirmed case counts are shown with dashed lines.}
-    \todo[figure]{Why is till March 20?}
+    \todo[inline]{Why is till March 20?}
     \label{fig:trajs}
 \end{figure}
 
@@ -107,8 +106,7 @@ We can think of a reporting rate as the number of reported cases relative to the
     \centering
     \includegraphics[width=\textwidth]{210205_europe10_figtraj08.png}
     \caption{\textbf{Evolution of the ratio of local transmissions by imported cases for the SARS-CoV-2 early epidemic in China, France, Germany, Italy, Spain and other European countries}. We compute for each day the ratio of new local infections by new imported cases for each of the analysed epidemic trajectories. Each line depicts the evolution of this ratio in one epidemic trajectory, coloured by the total number of estimated infections by the model. The black line is the median value for the ratio local/imported cases.}
-    \label{fig:events}
-    \todo[inline]{change legend outgoing migration}
+    \label{fig:localvsimported}
 \end{figure}
 
 
@@ -144,7 +142,7 @@ Hubei-China is the majority source of migrations for all countries till February
   \includegraphics[width=\textwidth]{210205_europe10_figtraj09c.png}
   \label{fig:migs3}
   \end{minipage}
-  \caption{\textbf{International imported case dynamics by analysis constat migration rate periods.} One chord diagram is drawn for each of the main periods of the analysis defined by the change times of the migration rates in the model. Each flux represents the infections exported from one country to another during the full period. The median value of infections for each flux is indicated in the plot.}
+  \caption{\textbf{International imported case dynamics by analysis constant-migration rate period.} One chord diagram is drawn for each of the main periods of the analysis defined by the change times of the migration rates in the model. Each flux represents the infections exported from one country to another during the full period. The median value of infections for each flux is indicated in the plot.}
   \label{fig:migs}
 \end{figure}
 
@@ -153,9 +151,8 @@ Hubei-China is the majority source of migrations for all countries till February
 \begin{figure}[p]
     \centering
     \includegraphics[width=\textwidth]{210205_europe10_figtraj10.png}
-    \caption{First introductions of SARS-CoV-2. From the set of random subsampled trajectories, the first introduction time for each epidemic trajectory is recorded and the probability distribution over all these times is plotted. \textbf{A} Probability density of the time of first introduction for each deme. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of China, the distribution of the origin time is plotted, since in the analysis we defined Chine as the origin of the epidemic with probability 1. For the other five demes, the distribution of the time of first migration into the deme is shown. \textbf{B} Stacked probability density of the destination of first introduction into Europe coloured by the destination deme. This first case corresponds to the first migration event from China to any of the European countries. \textbf{C} Stacked probability density of the source of the first introduction for each deme coloured by the source deme of the introduction.}
-    \label{fig:first}
-    \todo[inline]{ticks for every month}
+    \caption{\textbf{Evolution of daily imported cases and flight passengers by constant migration rate period of the analysis.} In each subfigure, we take the median number of daily imported cases by period in the country (x-axis) and the average of daily flight passengers from Eurostat for each source country.}
+    \label{fig:migsflights}
 \end{figure}
 
 
@@ -171,7 +168,6 @@ Maybe a table in the appendix? Or the plots with the priors.
 \begin{figure}[p]
     \centering
     \includegraphics[width=\textwidth]{particles_comparison.png}
-    \caption{First introductions of SARS-CoV-2. From the set of random subsampled trajectories, the first introduction time for each epidemic trajectory is recorded and the probability distribution over all these times is plotted. \textbf{A} Probability density of the time of first introduction for each deme. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of China, the distribution of the origin time is plotted, since in the analysis we defined Chine as the origin of the epidemic with probability 1. For the other five demes, the distribution of the time of first migration into the deme is shown. \textbf{B} Stacked probability density of the destination of first introduction into Europe coloured by the destination deme. This first case corresponds to the first migration event from China to any of the European countries. \textbf{C} Stacked probability density of the source of the first introduction for each deme coloured by the source deme of the introduction.}
+    \caption{\textbf{Impact of the number of particles on the stochastic simulation of epidemic trajectories.} We simulate epidemic trajectories with a tau-leaping algorithm from our infered parameters of the birth-death model and the phylogenetic trees. We use 300, 1000, 3000 and 10000 particles, i.e. number of trajectories simulated for each set of estimated parameters. In the y-axis, We plot the median number of total active infections, no longer infectious cases, imported cases and local transmissions, and the 95\% credible interval (shaded area) computed from the epidemic trajectories events and the number of particles in the x-axis. }
     \label{fig:particles}
-    \todo[inline]{ticks for every month}
 \end{figure}
